* 1.11.0
- port to python 3

* 1.10.7
- ignore 'mgarepo sync -c' and tell it's deprecated

* 1.10.6
- s/cooker/cauldron/
  thus fixing some stupid upload errors related to backports
- Use hardlinks when importing (can help speed up process for large SOURCES)
- Added aliases for commit (ci) and checkout (co)
- Improved detection of binary files

* 1.10.5
- Added README.BINREPO and youridb.sql to Python manifest
- Don't block waiting for stderr when displaying subprocess output (#952)

* 1.10.4
- Add completion/mgarepo with bash-completion

* 1.10.3
- in create-srpm, don't try to use youri db if not defined in config
- allow keeping the old rpm log in the package directory if the oldurl
  config value is set to '.' or starts with './'
- add putsrpm command in man page (#4055)
- fix putsrpm --help message (#4053)
- update URLs for new wiki

* 1.10.2
- fix svn info with subversion 1.7.1 (#3346)
- create-srpm: add new package in youri database
- add config option to specify maintdb hostname
- do not explode if the sha1.lst file is no longer here
- add --nosignature so signed rpm can be imported
- fix URL for anonymous svn in default config file

* 1.10.1
- check sha1sum of existing binary files when updating
- remove file when there was an error during download from binrepo

* 1.10.0
- change binrepo :
  http://mageia.org/pipermail/mageia-sysadm/2011-July/003717.html
- add command maintdb in the help
- Fix the example in the usage message of putsrpm.py

* 1.9.11
- add maintdb command
- Fix examples in the usage message of co.py

* 1.9.10
- ignore incorrect symlinks in SOURCES directory (#463)
- fix svn status function and only add files with status "?"
  in mgarepo sync (#349)
- do not leave empty file when download failed (#374)
- remove logging error
- remove link to mandriva build system from help
- add 'up' to the --help message
- fix example in usage message

* 1.9.9
- in sync, only try to remove files that are on svn or symlinks
- check hash for binary files