@@ -21,6 +21,7 @@ Options:
     -r REV  Revision to checkout
     -s      Only checkout the SPECS/ directory
     -M      Do not use the mirror (use the main repository)
+    -k      the package backport branch
     -h      Show this message
 
 Examples:
@@ -36,6 +37,7 @@ def parse_options():
     parser.add_option("-r", dest="revision")
     parser.add_option("--distribution", "-d", dest="distro", default=None)
     parser.add_option("--branch", "-b", dest="branch", default=None)
+    parser.add_option("--backports", "-k", dest="backports", default=None)
     parser.add_option("-s", "--spec", dest="spec", default=False,
             action="store_true")
     parser.add_option("-M", "--no-mirror", action="callback",
