@@ -1,5 +1,6 @@
 * 1.11.0
 - port to python 3
+- Add support for backports checkout
 
 * 1.10.7
 - ignore 'mgarepo sync -c' and tell it's deprecated
